tests/error/comprehension_errors/mutable_struct2.err
Error: Copy violation (at $FILE:16:5)
   | 
14 | @guppy
15 | def foo(ss: list[MyStruct] @ owned) -> None:
16 |     [s.x for s in ss if bar(s)]
   |      ^^^ Field `s.x` cannot be moved ...

Note:
   | 
15 | def foo(ss: list[MyStruct] @ owned) -> None:
16 |     [s.x for s in ss if bar(s)]
   |                             - ... since variable `s` with non-copyable type `MyStruct` was
   |                               already consumed here

Guppy compilation failed due to 1 previous error
